ODP-6879: Fix compilation issues after JDK 17